# ClangUML

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLibClang.cmake
libclanguml/: CMakeLists.txt  clanguml.c
libclanguml/include/clanguml/: clanguml.h
src/: main.c
